--- a/index.html
+++ b/index.html
@@ -1441,6 +1441,10 @@
                       </p>
                       <p><span>Tae-Hyun Kim (M.S.-Ph.D. @ POSTECH)</span></p>
                       <p><span>Seung-Wan Han (ASML)</span></p>
+                      <p><span>Woo-Suk Jung (@ Yonsei
+                        University)</span></p>
+                      <p><span>
+                        Dong-Eun Lee (Samsung Electronics)</span></p>
                     </div>
                   </div>
                 </div>
