--- a/index.html
+++ b/index.html
@@ -1398,6 +1398,7 @@
                       <p><span>박문석 (pim)</span></p>
                       <p><span>박계륜 (tbd)</span></p>
                       <p><span>최재진 (tbd)</span></p>
+                      <p><span>김재식 (tbd)</span></p>
 
                     </div>
                   </div>
