--- a/index.html
+++ b/index.html
@@ -1386,7 +1386,7 @@
                     <div class="user-card-info">
                       <h2>Hanyang University Erica</h2>
                       <p><span><b>4학년</b></span></p>                      
-                      <p><span>김승현 (tbd)</span></p>
+                      <p><span></span></p>
                       <p><span></span></p>
 
                       <p><span><b>3학년</b></span></p> 
