--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,9 @@
                       <p><span>박계륜 (tbd)</span></p>
                       <p><span>최재진 (tbd)</span></p>
                       <p><span>김재식 (tbd)</span></p>
-
+                      <p><span></span></p>
+                      <p><span><b>2학년</b></span></p>                      
+                      <p><span></span></p>
                     </div>
                   </div>
                 </div>
