Pub 아코디언 제거

--- a/index.html
+++ b/index.html
@@ -1058,14 +1058,14 @@
                       <p><span>Tape-out Schedule</span>2024.</p>
                       <p>
                         <span>Details</span>Received a B.S. degree in the school
-                        of Applied Physics at Hanyang University, Ansan, South Korea. 
-                        She is currently pursuing a M.S. degree in the school of electrical
-                        engineering at Hanyang University, Ansan, South Korea.
-                        Her research interests include artificial intelligence
-                        hardware design and processing in memory (PIM).
+                        of Applied Physics at Hanyang University, Ansan, South
+                        Korea. She is currently pursuing a M.S. degree in the
+                        school of electrical engineering at Hanyang University,
+                        Ansan, South Korea. Her research interests include
+                        artificial intelligence hardware design and processing
+                        in memory (PIM).
                       </p>
-                      <p><span>Email</span>sykwon00@hanyang.ac.kr
-                      </p>
+                      <p><span>Email</span>sykwon00@hanyang.ac.kr</p>
                     </div>
                   </div>
                 </div>
@@ -1078,7 +1078,15 @@
                       <h2>In-Ho Han</h2>
                       <p><span>Research Interests</span>PLL</p>
                       <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>Received a B.S. degree in electrical engineering from Gachon University, Sungnam, South Korea. He is currently pursuing a M.S. degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. His research interests include analog and digital circuit designs of phase-locked-loop (PLL).</p>
+                      <p>
+                        <span>Details</span>Received a B.S. degree in electrical
+                        engineering from Gachon University, Sungnam, South
+                        Korea. He is currently pursuing a M.S. degree in the
+                        school of electrical engineering at Hanyang University,
+                        Ansan, South Korea. His research interests include
+                        analog and digital circuit designs of phase-locked-loop
+                        (PLL).
+                      </p>
                       <p><span>Email</span>inho0303@hanyang.ac.kr</p>
                     </div>
                   </div>
@@ -1090,9 +1098,16 @@
                     </div>
                     <div class="user-card-info">
                       <h2>Seung-Hwan Gong</h2>
-                      <p><span>Research Interests</span>CDR, DSP-based Receiver</p>
+                      <p>
+                        <span>Research Interests</span>CDR, DSP-based Receiver
+                      </p>
                       <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>Received a B.S. degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. His research interests interests include  CDR, DSP-based Receiver.</p>
+                      <p>
+                        <span>Details</span>Received a B.S. degree in the school
+                        of electrical engineering at Hanyang University, Ansan,
+                        South Korea. His research interests interests include
+                        CDR, DSP-based Receiver.
+                      </p>
                       <p><span>Email</span>fire051324@gmail.com</p>
                     </div>
                   </div>
@@ -1104,9 +1119,16 @@
                     </div>
                     <div class="user-card-info">
                       <h2>Dong-Ho Kim</h2>
-                      <p><span>Research Interests</span>DSP-based Transmitter</p>
+                      <p>
+                        <span>Research Interests</span>DSP-based Transmitter
+                      </p>
                       <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>Received a B.S. degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. His research interests interests include DSP-DAC based transmitter.</p>
+                      <p>
+                        <span>Details</span>Received a B.S. degree in the school
+                        of electrical engineering at Hanyang University, Ansan,
+                        South Korea. His research interests interests include
+                        DSP-DAC based transmitter.
+                      </p>
                       <p><span>Email</span>dpdl112@hanyang.ac.kr</p>
                     </div>
                   </div>
@@ -1133,7 +1155,6 @@
                   </div>
                 </div>
               </div>
-          
 
               <!-- Undergraduate Researchers -->
               <h3 id="undergraduate">Undergraduate Researchers</h3>
@@ -1385,11 +1406,15 @@
                     </div>
                     <div class="user-card-info">
                       <h2>Hanyang University Erica</h2>
-                      <p><span><b>4학년</b></span></p>                      
+                      <p>
+                        <span><b>4학년</b></span>
+                      </p>
                       <p><span></span></p>
                       <p><span></span></p>
 
-                      <p><span><b>3학년</b></span></p> 
+                      <p>
+                        <span><b>3학년</b></span>
+                      </p>
                       <p><span>이진호 (pim)</span></p>
                       <p><span>정보성 (analog)</span></p>
                       <p><span>이도형 (CDR)</span></p>
@@ -1400,7 +1425,9 @@
                       <p><span>최재진 (tbd)</span></p>
                       <p><span>김재식 (tbd)</span></p>
                       <p><span></span></p>
-                      <p><span><b>2학년</b></span></p>                      
+                      <p>
+                        <span><b>2학년</b></span>
+                      </p>
                       <p><span></span></p>
                     </div>
                   </div>
@@ -1444,10 +1471,8 @@
                       </p>
                       <p><span>Tae-Hyun Kim (M.S.-Ph.D. @ POSTECH)</span></p>
                       <p><span>Seung-Wan Han (ASML)</span></p>
-                      <p><span>Woo-Suk Jung (@ Yonsei
-                        University)</span></p>
-                      <p><span>
-                        Dong-Eun Lee (Samsung Electronics)</span></p>
+                      <p><span>Woo-Suk Jung (@ Yonsei University)</span></p>
+                      <p><span> Dong-Eun Lee (Samsung Electronics)</span></p>
                     </div>
                   </div>
                 </div>
@@ -1494,7 +1519,7 @@
 
           <div class="col-12 col-lg-8 tab-content">
             <!-- Pub: Journal -->
-            <div id="journal" class="accordion tab-pane fade show active">
+            <div id="journal" class="tab-pane fade show active">
               <!-- 2024 -->
               <h3>2024</h3>
               <div class="container">Journal 2024</div>
@@ -2499,7 +2524,7 @@
             </div>
 
             <!-- Pub: Conference-->
-            <div id="conference" class="accordion tab-pane fade">
+            <div id="conference" class="tab-pane fade">
               <h3>2024</h3>
               <div class="container">
                 <div class="row">
@@ -3320,7 +3345,7 @@
             </div>
 
             <!-- Pub: Patent-->
-            <div id="patent" class="accordion tab-pane fade">
+            <div id="patent" class="tab-pane fade">
               <h3>2024</h3>
               <div class="container">
                 <div class="row">
