--- a/index.html
+++ b/index.html
@@ -723,68 +723,7 @@
           <div class="col-12 col-lg-8">
             <!-- Principal Investigator -->
             <h3 id="professor">Principal Investigator</h3>
-            <div class="row principal-investigator">
-              <script>
-                $(document).ready(function () {
-                  $.getJSON("json/people/principal_investigator.json").done(
-                    function (people) {
-                      const container = $(".principal-investigator");
-
-                      people.forEach((person) => {
-                        const profile = `
-              <div class="col-12 col-lg-4">
-                <!-- 프로필 이미지 -->
-                <img
-                  class="portrait"
-                  src="img/minseong-chu-profile-img.png"
-                  alt="minseong-chu-profile-img"
-                />
-
-                <!-- 프로필 이미지 아래 설명 -->
-                <div class="portrait-title">
-                  <h2>Minseong Choo</h2>
-                  <h3>Assistant Professor</h3>
-
-                  <!-- 프로필 아래 링크 아이콘 -->
-                  <ul class="network-icon" area-hidden="true">
-                    <li>
-                      <a
-                        href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"
-                      >
-                        <img src="img/google-scholar-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"
-                      >
-                        <img src="img/cv-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/min-seong-choo-5b7036176/"
-                      >
-                        <img src="img/linkedin-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://orcid.org/0000-0002-8638-6332">
-                        <img src="img/orcid-svg.svg" />
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-                      `;
-
-                        cardContainer.append(card);
-                      });
-                    }
-                  );
-                });
-              </script>
-            </div>
+            <div class="row principal-investigator"></div>
 
             <!-- Ph.D./M.S. Students -->
             <h3 id="phd-ms-students">Ph.D./M.S. Students</h3>
@@ -3621,6 +3560,7 @@
     ></script>
     <!-- Custom js -->
     <script src="js/update_award.js"></script>
+    <script src="js/principal_investigator.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
