--- a/index.html
+++ b/index.html
@@ -727,152 +727,11 @@
 
             <!-- Ph.D./M.S. Students -->
             <h3 id="phd-ms-students">Ph.D./M.S. Students</h3>
-            <div class="row">
-              <div class="col-12 col-lg-4">
-                <img
-                  class="portrait"
-                  src="img/minseong-chu-profile-img.png"
-                  alt="minseong-chu-profile-img"
-                />
-
-                <div class="portrait-title">
-                  <h2>Minseong Choo</h2>
-                  <h3>Assistant Professor</h3>
-
-                  <ul class="network-icon" area-hidden="true">
-                    <li>
-                      <a
-                        href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"
-                      >
-                        <img src="img/google-scholar-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"
-                      >
-                        <img src="img/cv-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/min-seong-choo-5b7036176/"
-                      >
-                        <img src="img/linkedin-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://orcid.org/0000-0002-8638-6332">
-                        <img src="img/orcid-svg.svg" />
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <!-- </div> -->
-
-              <div class="col-12 col-lg-4">
-                <!-- 프로필 이미지 -->
-                <img
-                  class="portrait"
-                  src="img/minseong-chu-profile-img.png"
-                  alt="minseong-chu-profile-img"
-                />
-
-                <!-- 프로필 이미지 아래 설명 -->
-                <div class="portrait-title">
-                  <h2>Minseong Choo</h2>
-                  <h3>Assistant Professor</h3>
-
-                  <!-- 프로필 아래 링크 아이콘 -->
-                  <ul class="network-icon" area-hidden="true">
-                    <li>
-                      <a
-                        href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"
-                      >
-                        <img src="img/google-scholar-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"
-                      >
-                        <img src="img/cv-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/min-seong-choo-5b7036176/"
-                      >
-                        <img src="img/linkedin-svg.svg" />
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://orcid.org/0000-0002-8638-6332">
-                        <img src="img/orcid-svg.svg" />
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+            <div class="row phd-ms-students"></div>
 
             <!-- M.S.-Ph.D. Candidates -->
             <h3 id="ms-phd-candidates">M.S.-Ph.D. Candidates</h3>
-            <div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/su-kang-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Shin-Uk Kang</h2>
-                    <p>
-                      <span>Research Interests</span> AI hardware design and PIM
-                    </p>
-                    <p>
-                      <span>Tape-out Schedule</span>2023.12 (65-nm T), 2024.05
-                      (28-nm T)
-                    </p>
-                    <p><span>Achievements</span>ICEIC'23, ICEIC'24</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of electrical engineering at Hanyang University, Ansan,
-                      South Korea. He is currently pursuing a M.S -Ph.D. degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. His research interests
-                      include artificial intelligence hardware design and
-                      processing in memory (PIM).
-                    </p>
-                    <p><span>Email</span> ksu2068@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/km-kim-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Kang-Min Kim</h2>
-                    <p>
-                      <span>Research Interests</span> Physically Unclonable
-                      Function (PUF)
-                    </p>
-                    <p><span>Tape-out Schedule</span>2024.05 (28-nm T)</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of electrical engineering at Hanyang University, Ansan,
-                      South Korea. He is currently pursuing a M.S -Ph.D. degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. His research interests
-                      include hardware security.
-                    </p>
-                    <p><span>Email</span> mim455@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="row ms-phd-candidates"></div>
 
             <!-- M.S. Candidates -->
             <h3 id="ms-candidates">M.S. Candidates</h3>
@@ -3560,7 +3419,7 @@
     ></script>
     <!-- Custom js -->
     <script src="js/update_award.js"></script>
-    <script src="js/principal_investigator.js"></script>
+    <script src="js/profile.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
