--- a/index.html
+++ b/index.html
@@ -735,261 +735,7 @@
 
             <!-- M.S. Candidates -->
             <h3 id="ms-candidates">M.S. Candidates</h3>
-            <div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/jh-kim-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Ji-Ho Kim</h2>
-                    <p><span>Research Interests</span> High PSRR DPLL</p>
-                    <p>
-                      <span>Tape-out Schedule</span>2023.12 (65-nm T), 2023.11
-                      (28-nm S)
-                    </p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in electrical
-                      engineering from Chosun University, Gwangju, South Korea.
-                      He is currently pursuing a M.S. degree in the school of
-                      electrical engineering at Hanyang University, Ansan, South
-                      Korea. His research interests include analog and digital
-                      circuit designs of phase-locked-loop (PLL).
-                    </p>
-                    <p><span>Email</span> wlgh654@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/dh-heo-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Dong-Hoe Heo</h2>
-                    <p>
-                      <span>Research Interests</span> Wide-range PI-based CDR
-                    </p>
-                    <p><span>Tape-out Schedule</span>2024.06 (28-nm T)</p>
-                    <p>
-                      <span>Achievements</span>ICEIC'24 Best Paper Award - Gold
-                      Prize
-                    </p>
-
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of electrical engineering at Hanyang University, Ansan,
-                      South Korea. He is currently pursuing a M.S. degree in the
-                      school of electrical engineering at Hanyang University,
-                      Ansan, South Korea. His research interests include clock
-                      and data recovery (CDR) circuit design.
-                    </p>
-                    <p><span>Email</span> ehdghl97@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/kr-park-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Kyu-Ran Park</h2>
-                    <p><span>Research Interests</span>High-performance DPLL</p>
-                    <p><span>Tape-out Schedule</span>2023.11 (65-nm T)</p>
-                    <p><span>Achievements</span>CASS Best Design Award</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in electrical
-                      engineering from Cheongju University, Cheongju, South
-                      Korea. She is currently pursuing a M.S. degree in the
-                      school of electrical engineering at Hanyang University,
-                      Ansan, South Korea. She joined LX Semicon, Seoul, South
-                      Korea, in 2015, where she was involved in the YPD team.
-                      Her research interests include analog and digital circuit
-                      designs of phase-locked-loop (PLL).
-                    </p>
-                    <p><span>Email</span>lan2137@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/sh-ok-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Sang-Hyun Ok</h2>
-                    <p><span>Research Interests</span>CDR, PAM4 receiver</p>
-                    <p>
-                      <span>Tape-out Schedule</span>2024.06 (28-nm T), 2024.09
-                      (40-nm T)
-                    </p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of electronics and communication engineering at Hanyang
-                      University, Ansan, South Korea. He is currently pursuing a
-                      Master's degree in the school of electrical engineering at
-                      Hanyang University, Ansan, South Korea. He joined LX
-                      Semicon, Seoul, South Korea in 2016, where he was involved
-                      in the LCD DDI team. His research interests include
-                      digital and analog circuit design of Clock and Data
-                      Recovery (CDR) and digital circuit design of PAM4 Receiver
-                      with adaptive decision feedback equalizer.
-                    </p>
-                    <p><span>Email</span>noradlll@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/dh-lee-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Dong-Hyun Lee</h2>
-                    <p>
-                      <span>Research Interests</span>AI hardware design and PIM
-                    </p>
-                    <p><span>Tape-out Schedule</span>2024.05 (28-nm T)</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of Electrical and Electronic Engineering at Dankook
-                      University, jukjeon, South Korea. He is currently pursuing
-                      a M.S. degree in the school of electrical engineering at
-                      Hanyang University, Ansan, South Korea. His research
-                      interests include artificial intelligence hardware design
-                      and processing in memory (PIM).
-                    </p>
-                    <p><span>Email</span>dhlee1415@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/jh-pyeon-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Jae-Hyeon Pyeon</h2>
-                    <p><span>Research Interests</span>High-performance DPLL</p>
-                    <p><span>Tape-out Schedule</span>2023.07 (28-nm S)</p>
-                    <p>
-                      <span>Details</span>Pursuing a Bachelor's degree in the
-                      school of electrical engineering at Hanyang University,
-                      Ansan, South Korea. He will join the HPIC Design Lab. in
-                      the fall semester of 2024. His research interests include
-                      analog and digital circuit designs of phase-locked-loop
-                      (PLL).
-                    </p>
-                    <p><span>Email</span>ccomo7004@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/sw-kwon-profile-image.jpeg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>So-Yeon Kwon</h2>
-                    <p><span>Research Interests</span>Digital PIM</p>
-                    <p><span>Tape-out Schedule</span>2024.</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of Applied Physics at Hanyang University, Ansan, South
-                      Korea. She is currently pursuing a M.S. degree in the
-                      school of electrical engineering at Hanyang University,
-                      Ansan, South Korea. Her research interests include
-                      artificial intelligence hardware design and processing in
-                      memory (PIM).
-                    </p>
-                    <p><span>Email</span>sykwon00@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/ih-han-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>In-Ho Han</h2>
-                    <p><span>Research Interests</span>PLL</p>
-                    <p><span>Tape-out Schedule</span>2024.</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in electrical
-                      engineering from Gachon University, Sungnam, South Korea.
-                      He is currently pursuing a M.S. degree in the school of
-                      electrical engineering at Hanyang University, Ansan, South
-                      Korea. His research interests include analog and digital
-                      circuit designs of phase-locked-loop (PLL).
-                    </p>
-                    <p><span>Email</span>inho0303@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/sh-gong-profile-image.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Seung-Hwan Gong</h2>
-                    <p>
-                      <span>Research Interests</span>CDR, DSP-based Receiver
-                    </p>
-                    <p><span>Tape-out Schedule</span>2024.</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of electrical engineering at Hanyang University, Ansan,
-                      South Korea. His research interests interests include CDR,
-                      DSP-based Receiver.
-                    </p>
-                    <p><span>Email</span>fire051324@gmail.com</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/dh-kim-profile-image.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Dong-Ho Kim</h2>
-                    <p><span>Research Interests</span>DSP-based Transmitter</p>
-                    <p><span>Tape-out Schedule</span>2024.</p>
-                    <p>
-                      <span>Details</span>Received a B.S. degree in the school
-                      of electrical engineering at Hanyang University, Ansan,
-                      South Korea. His research interests interests include
-                      DSP-DAC based transmitter.
-                    </p>
-                    <p><span>Email</span>dpdl112@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/empty-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Open Positions.</h2>
-                    <p>
-                      <span>Research Interests</span>
-                    </p>
-                    <p>
-                      <span>Tape-out Schedule</span>
-                    </p>
-                    <p>
-                      <span>Achievements</span>
-                    </p>
-                    <p><span>Details</span></p>
-                    <p><span>Email</span></p>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="row ms-candidates"></div>
 
             <!-- Undergraduate Researchers -->
             <h3 id="undergraduate">Undergraduate Researchers</h3>
